# autogen-ts-engine

./: .gitignore  GENERIC_ENGINE_SUMMARY.md  GITHUB_SETUP.md  IDE_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  LICENSE  QA_IMPROVEMENT_GUIDE.md  README.md  TRANSFORMATION_SUMMARY.md  cleanup_redundant_code.py  debug_test.py  demo_multi_language.py  demo_qa_improvement.py  fix_redundant_code.py  prompt.md  pyproject.toml  qa_improvement_runner.py  quick_gemini_test.py  quick_start_project.py  requirements-dev.txt  requirements.txt  reset_project.py  run_gemini_test.py  setup_gemini_test.py  setup_github.sh  switch_project_type.py  test_final_system.py  test_gemini_integration.py  test_integration.py  test_mock.py  test_mock_engine.py  test_multi_language.py  test_qa_gemini.py  test_qa_with_generated_project.py  test_with_gemini.py
autogen_ts_engine/: __init__.py  agent_factory.py  code_generator.py  config_parser.py  error_recovery.py  fs_bootstrap.py  gemini_adapter.py  git_ops.py  ide_interface.py  integration_tester.py  logging_utils.py  main.py  mock_llm.py  node_ops.py  rag_store.py  rl_module.py  schemas.py  sprint_artifacts.py  sprint_runner.py  test_runner.py
config/: agents.md  gemini_settings.md  qa_improvement_agents.md  qa_improvement_settings.md  settings.md  typescript_project.md  typescript_settings.md
examples/: README.md  usage-examples.md
examples/ide-integrations/: README.md  cursor_agent.py  vscode_extension.js
examples/python-app/config/: agents.md  settings.md
examples/react-app/config/: agents.md  settings.md
examples/typescript-app/config/: agents.md  settings.md
gemini_project_db/: chroma.sqlite3
qa_test_project/: main.py
