[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-ts-engine"
version = "0.1.0"
description = "AutoGen-based multi-agent TypeScript development engine with offline capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AutoGen TS Engine Team"}
]
keywords = ["autogen", "typescript", "multi-agent", "development", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pyautogen>=0.2.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "gymnasium>=0.29.0",
    "google-generativeai>=0.3.0",  # For Gemini support
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "websockets>=11.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
autogen-ts-engine = "autogen_ts_engine.main:main"

[project.urls]
Homepage = "https://github.com/your-org/autogen-ts-engine"
Repository = "https://github.com/your-org/autogen-ts-engine"
Issues = "https://github.com/your-org/autogen-ts-engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["autogen_ts_engine"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]
